Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjInteger.quorum
class Main
    action Main
        integer v = 5
        Test(v)
    end

    action Test(Boolean var)
    end
end
